updated app.py and openapi to add the new mockhome service enpoint
