# backend-flask/app.py
@@ -4,6 +4,7 @@ from flask_cors import CORS, cross_origin
 import os
 
 from services.home_activities import *
+from services.mockhome_activities import *
 from services.notifications_activities import *
 from services.user_activities import *
 from services.create_activity import *
@@ -97,6 +98,13 @@ def data_notifications():
 def data_home():
   data = HomeActivities.run()
   return data, 200
+
+# Honeycomb
+# Mock home
+@app.route("/api/activities/mockhome", methods=['GET'])
+def data_mockhome():
+  data = MockHomeActivities.run()
+  return data, 200  
 
 @app.route("/api/activities/@<string:handle>", methods=['GET'])
 def data_handle(handle):
