# backend-flask/openapi-3.0.yml
@@ -163,6 +163,20 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Activity'
+  /api/activities/mockhome:
+    get:
+      description: 'Return a feed of activity based on all users'
+      tags:
+        - activities
+      responses:
+        '200':
+          description: Returns an array of activities"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Activity'
 
 
 components:
